objects/Case.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <businessProcesses>
        <fullName>Appeals</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Care Requests</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Complaints and Grievances</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Appeal</fullName>
        <active>true</active>
        <businessProcess>Appeals</businessProcess>
        <description>Record type for review and disposition of an appeal related to a prior authorization or admission decision.</description>
        <label>Appeal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Admission</fullName>
        <active>true</active>
        <businessProcess>Care Requests</businessProcess>
        <description>Record type for notification and approval of an inpatient admission.</description>
        <label>Admission</label>
    </recordTypes>
    <recordTypes>
        <fullName>Complaint</fullName>
        <active>true</active>
        <businessProcess>Complaints and Grievances</businessProcess>
        <description>Record type for review and resolution of a complaint.</description>
        <label>Complaint</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grievance</fullName>
        <active>true</active>
        <businessProcess>Complaints and Grievances</businessProcess>
        <description>Record type for review and resolution of a grievance.</description>
        <label>Grievance</label>
    </recordTypes>
    <recordTypes>
        <fullName>DrugRequest</fullName>
        <active>true</active>
        <businessProcess>Care Requests</businessProcess>
        <description>Record type for prior authorization request and approval of a prescription drug.</description>
        <label>Drug Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>ServiceRequest</fullName>
        <active>true</active>
        <businessProcess>Care Requests</businessProcess>
        <description>Record type for prior authorization request and approval of a procedure or service.</description>
        <label>Service Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>ConcurrentReview</fullName>
        <active>true</active>
        <businessProcess>Care Requests</businessProcess>
        <description>Record type for review and approval of a continued stay related to an inpatient admission.</description>
        <label>Concurrent Review</label>
    </recordTypes>
</CustomObject>